@@ -90,7 +90,7 @@ public abstract class LineFormsGraphNode extends GraphNode {
         // interactivity for point (x1,y1) manipulator
         pointManipulator = new LineManipulatorNode( manipulatorDiameter, pointManipulatorColor );
         pointManipulator.addInputEventListener( new CursorHandler() );
-        pointManipulator.addInputEventListener( new PointDragHandler( UserComponents.interceptManipulator, UserComponentTypes.sprite,
+        pointManipulator.addInputEventListener( new PointDragHandler( UserComponents.pointManipulator, UserComponentTypes.sprite,
                                                                       pointManipulator, mvt, interactiveLine, x1Range, y1Range ) );
         // interactivity for slope manipulator
         slopeManipulatorNode = new LineManipulatorNode( manipulatorDiameter, slopeManipulatorColor );
