@@ -1,57 +1,0 @@
-// Copyright 2002-2012, University of Colorado
-package edu.colorado.phet.linegraphing.slopeintercept.view;
-
-import java.awt.geom.Point2D;
-
-import edu.colorado.phet.common.phetcommon.math.MathUtil;
-import edu.colorado.phet.common.phetcommon.model.property.Property;
-import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
-import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponentType;
-import edu.colorado.phet.common.phetcommon.util.DoubleRange;
-import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
-import edu.colorado.phet.linegraphing.common.model.StraightLine;
-import edu.colorado.phet.linegraphing.common.view.LineManipulatorDragHandler;
-import edu.colorado.phet.linegraphing.common.view.LineManipulatorNode;
-import edu.umd.cs.piccolo.event.PInputEvent;
-
-/**
- * Drag handler for the intercept manipulator of a line in slope-intercept form.
- *
- * @author Chris Malley (cmalley@pixelzoom.com)
- */
-public class InterceptDragHandler extends LineManipulatorDragHandler {
-
-    private final Property<DoubleRange> yInterceptRange;
-    private double clickYOffset; // offset of mouse click from dragNode's origin, in parent's coordinate frame
-
-    /**
-     * Constructor
-     * @param userComponent sim-sharing component identifier
-     * @param componentType sim-sharing component type
-     * @param manipulatorNode the node being manipulated by the user
-     * @param mvt  transform between model and view coordinate frames
-     * @param line the line being manipulated
-     * @param yInterceptRange
-     */
-    public InterceptDragHandler( IUserComponent userComponent, IUserComponentType componentType,
-                                 LineManipulatorNode manipulatorNode, ModelViewTransform mvt, Property<StraightLine> line,
-                                 Property<DoubleRange> yInterceptRange ) {
-        super( userComponent, componentType, manipulatorNode, mvt, line );
-        assert ( line.get().x1 == 0 ); // line is in slope intercept form
-        this.yInterceptRange = yInterceptRange;
-    }
-
-    @Override protected void startDrag( PInputEvent event ) {
-        super.startDrag( event );
-        Point2D pMouse = event.getPositionRelativeTo( manipulatorNode.getParent() );
-        clickYOffset = pMouse.getY() - mvt.modelToViewDeltaY( line.get().y1 );
-    }
-
-    @Override protected void drag( PInputEvent event ) {
-        super.drag( event );
-        Point2D pMouse = event.getPositionRelativeTo( manipulatorNode.getParent() );
-        // constrain to range, snap to grid
-        double yIntercept = MathUtil.roundHalfUp( MathUtil.clamp( mvt.viewToModelDeltaY( pMouse.getY() - clickYOffset ), yInterceptRange.get() ) );
-        line.set( new StraightLine( line.get().rise, line.get().run, yIntercept, line.get().color ) );
-    }
-}
